--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
+    "mongoose-title-case": "0.0.4",
+    "mongoose-validator": "^1.3.2",
     "morgan": "^1.9.0"
   }
 }
