--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^4.13.7",
     "mongoose-title-case": "0.0.4",
     "mongoose-validator": "^1.3.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.4.1",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
